tests/parsing/smtlib/poly/errors/054_declare-const_unclosed_1.psmt2
(set-logic ALL)
(declare-const foo bar _)
