tests/parsing/smtlib/poly/errors/054_declare-const_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/054_declare-const_unclosed_1.psmt2", line 2, character 23-24:
Error while parsing a constant declaration, read the reserved word '_',
      but expected a closing parenthesis.
